<resources>
    <string name="app_name">AniRecord</string>
    <string name="label_home">Popular Now</string>
    <string name="label_search">Search</string>
    <string name="label_show_detail">Show Details</string>
    <string name="show_detail_cover_description">Show cover</string>
    <string name="show_status_finished">Finished</string>
    <string name="show_status_releasing">Releasing</string>
    <string name="show_status_to_be_released">To Be Released</string>
    <string name="show_status_cancelled">Cancelled</string>
    <string name="show_status_hiatus">Hiatus</string>
    <string name="show_status_unknown">Unknown</string>
    <string name="main_characters_label">Main Characters</string>
    <string name="staff_label">Show Staff</string>
    <string name="view_all_label">View All</string>
    <string name="by_actor_label">by %1$s</string>
    <string name="next_episode_released_label">Episode %1$d airs : %2$s</string>
    <string name="next_episode_not_released_label">Season premiere: %1$s</string>
    <string name="label_staff_list">Staff List</string>
    <string name="label_voice_actor_list">Voice Actor List</string>
    <string name="as_character_label">as %1$s</string>
    <string name="empty_search">No results</string>
    <string name="start_search">Start searching</string>
    <string name="label_list_collection">List Collection</string>
    <string name="label_favourites">Favourites</string>
    <string name="label_empty_favourites">Favourites is empty</string>
    <string name="label_toggle_favourite">Toggle Favourite</string>
    <string name="label_staff_works">Worked On</string>
    <string name="unknown_label">Unknown</string>
    <string name="add">ADD</string>
    <string name="start_listing">Start creating</string>
    <string name="label_list_detail">List Detail</string>
    <string name="empty_list_detail_label">No shows on the list</string>
    <string name="wrong_list_name">Invalid list name</string>
    <string name="update_button_label">UPDATE</string>
    <string name="delete_from_list">Delete from list</string>
    <string name="rename_list">Rename list</string>
    <string name="delete_list">Delete list</string>
    <string name="check_image_content_description">check</string>
    <string name="add_list_input_hint_label">List name</string>
    <string name="show_detail_more_menu">more options</string>
    <string name="add_to_list">Add to lists</string>
    <string name="has_not_list">There are no lists</string>
    <string name="last_chapter_label">Last chapter seen</string>
    <string name="label_empty_pending">Pending is empty</string>
    <string name="label_pending">Pending</string>
    <string name="label_watched">Watched</string>
    <string name="label_empty_watched">Watched is empty</string>
    <string name="label_watching">Watching</string>
    <string name="show_still_airing_label">Show still airing, watched %1$d</string>
    <string name="watched_progress_label">Watched %1$d / %2$d</string>
    <string name="not_watched_label">Not watched</string>
    <string name="episode_n_label">Episode %1$d</string>
    <string name="label_toggle_pending">Toggle Pending</string>
    <string name="label_empty_watching">Watching is empty</string>
</resources>