<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.anirecord.ui.home.HomeFragment"
        android:label="@string/label_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/navToDetail"
            app:destination="@id/showDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/showDetailFragment"
        android:name="com.example.anirecord.ui.showdetail.ShowDetailFragment"
        android:label="@string/label_show_detail"
        tools:layout="@layout/fragment_show_detail">
        <argument
            android:name="showId"
            app:argType="integer"
            app:nullable="false" />

        <action
            android:id="@+id/navToStaffList"
            app:destination="@id/staffListFragment" />

        <action
            android:id="@+id/navToVoiceActorList"
            app:destination="@id/voiceActorListFragment" />
    </fragment>

    <fragment
        android:id="@+id/voiceActorListFragment"
        android:name="com.example.anirecord.ui.voiceactorlist.VoiceActorListFragment"
        android:label="@string/label_voice_actor_list"
        tools:layout="@layout/fragment_voice_actor_list">
        <argument
            android:name="showId"
            app:argType="integer"
            app:nullable="false" />
    </fragment>

    <fragment
        android:id="@+id/staffListFragment"
        android:name="com.example.anirecord.ui.stafflist.StaffListFragment"
        android:label="@string/label_staff_list"
        tools:layout="@layout/fragment_staff_list">
        <argument
            android:name="showId"
            app:argType="integer"
            app:nullable="false" />
    </fragment>
</navigation>